--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,50 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
 
-.banner{
+.Titulo {
     background-image: url(https://images.unsplash.com/photo-1585060544812-6b45742d762f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1481&q=80);
     width: 100%;
     height: 300px;
     background-repeat: no-repeat;
     text-align: center;
 }
+.Titulo ul{
+    list-style: none;
+    text-align: left;
+}
+.Titulo ul a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+.Titulo ul a:hover{
+    background-color: grey;
+    border-radius: 5px;
+}
+.subtitulo{
+    align-items: center;
+    text-align: justify;
+}
+.card {
+    display: block;
+    width: 350px;
+    height: 300px;
+    border: 1px solid lightgray;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.footer-link {
+    background-color: lightgreen;
+}
 
-.card{
-    width: 500px;
-    height: 500px;
-    
+.footer-link ul {
+    list-style: none;
+    margin: 15px;
+    padding: 5px;
+}
+
+.footer-link a {
+    text-decoration: none;
+    color: rgb(78, 75, 75);
 }
